--- a/src/app/features/transactions/components/transaction-row/transaction-row.component.html
+++ b/src/app/features/transactions/components/transaction-row/transaction-row.component.html
@@ -1,35 +1,28 @@
-<tr class="transaction-row" [attr.data-transaction-id]="ledgerEntry.id">
+<tr class="transaction-row" [attr.data-transaction-id]="transaction.id">
   <td class="date-cell">
-    <a
-      [routerLink]="['/accounts', accountId, 'transactions', ledgerEntry.id]"
-      class="transaction-link"
-    >
-      {{ ledgerEntry.postingDate | dateFormat: 'short' }}
-    </a>
+    {{ transaction.transactionDate | dateFormat: 'date' }}
   </td>
   <td class="source-cell">
-    <span class="source-type-badge" [attr.data-source-type]="ledgerEntry.sourceType">
-      {{ ledgerEntry.sourceType }}
+    <span class="source-type-badge" [attr.data-source-type]="transaction.sourceType">
+      {{ transaction.sourceType }}
     </span>
   </td>
-  <td class="reference-cell">{{ ledgerEntry.sourceReferenceId }}</td>
-  <td class="amount-cell text-right" [class.amount-debit]="ledgerEntry.debitAmount > 0">
-    {{ ledgerEntry.debitAmount > 0 ? (ledgerEntry.debitAmount | currencyFormat) : '-' }}
+  <td class="ledger-cell" [title]="transaction.ledgerAccount">
+    {{ transaction.ledgerAccount }}
   </td>
-  <td class="amount-cell text-right" [class.amount-credit]="ledgerEntry.creditAmount > 0">
-    {{ ledgerEntry.creditAmount > 0 ? (ledgerEntry.creditAmount | currencyFormat) : '-' }}
+  <td class="description-cell" [title]="transaction.description">
+    {{ transaction.description }}
   </td>
-  <td class="balance-cell text-right">
-    <app-running-balance-display [balance]="ledgerEntry.runningBalance"></app-running-balance-display>
+  <td class="amount-cell text-right" [ngClass]="{'amount-debit': transaction.debitAmount > 0}">
+    <span *ngIf="transaction.debitAmount > 0">{{ transaction.debitAmount | currencyDecimal }}</span>
+    <span *ngIf="transaction.debitAmount === 0" class="text-gray-400">-</span>
   </td>
-  <td class="invoice-cell">
-    <a
-      *ngIf="ledgerEntry.linkedInvoiceId"
-      [routerLink]="['/invoices', ledgerEntry.linkedInvoiceId]"
-      class="invoice-link"
-    >
-      {{ ledgerEntry.linkedInvoiceId }}
-    </a>
-    <span *ngIf="!ledgerEntry.linkedInvoiceId">-</span>
+  <td class="amount-cell text-right" [ngClass]="{'amount-credit': transaction.creditAmount > 0}">
+    <span *ngIf="transaction.creditAmount > 0">{{ transaction.creditAmount | currencyDecimal }}</span>
+    <span *ngIf="transaction.creditAmount === 0" class="text-gray-400">-</span>
+  </td>
+  <td class="reference-cell" [title]="transaction.sourceReferenceId || ''">
+    <span *ngIf="transaction.sourceReferenceId">{{ transaction.sourceReferenceId }}</span>
+    <span *ngIf="!transaction.sourceReferenceId" class="text-gray-400">-</span>
   </td>
 </tr>
